2014-07-21 Fred Kiefer <FredKiefer@gmx.de>

	* GormCore/GormImage.m: Fix the init issue for the second
	method as well. Small cleanup.

2014-05-31 10:58-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormDocumentController.h: add declaration of
	openDocumentForContentsOfURL:
	* GormCore/GormDocumentController.m: add implementation of
	openDocumentForContentsOfURL:
	* GormCore/GormDocument.m: Add implementation of revertContentsOfURL:..
	Fix bug#28644

2014-05-30 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Palettes/2Controls/GormColorWellAttributesInspector.h
	  fix typo in header guard
	* Palettes/2Controls/GormFormAttributesInspector.m
	  fix some format string warnings

2014-05-28 Riccardo Mottola <rm@gnu.org>

	* GormCore/GormClassInspector.m
	* GormCore/GormClassManager.m
	* GormCore/GormFilePrefsManager.m
	* GormCore/GormInspectorsManager.m
	Explicitely cast NSIntegers to avoid warning and problems.

>>>>>>> .r37930
2014-05-27 03:26-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormInspectorsManager.m
	* Palettes/2Controls/GormMatrixAttributesInspector.h
	* Palettes/2Controls/GormMatrixAttributesInspector.m
	* Palettes/2Controls/GormNSMatrixInspector.gorm: Fix for bug #28646.

2014-05-27 03:15-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormDocument.m: Fix bug #39072: add retain to prevent
	segmentation fault when renaming object in document view.

2014-05-26 19:25-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormObjCHeaderParser/OCIVarDecl.m
	* GormObjCHeaderParser/OCIVar.m: Fix for bug#30837.

2014-05-26 18:32-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Palettes/2Controls/GormFormAttributesInspector.h
	* Palettes/2Controls/GormFormAttributesInspector.m
	* Palettes/2Controls/GormNSFormInspector.gorm: Accept patch on
	bug#38477 by Sergei Golovin. Allows user to modify the
	number of items in an NSForm using the inspector.
